# healthcare-knowledge-navigator

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
eval/: run_eval.py  test_cases.json
samples/: cv_risk_t2dm_research_summary.txt  t2dm_management_guideline.txt
src/: confidence.py  config.py  embeddings.py  graph_db.py  ingest.py  llm.py  main.py  retrieval.py  state.py  web.py
src/agents/: entity_linker.py  extractor.py  synthesizer.py
tests/: test_confidence.py  test_ingest.py  test_state.py
