[project]
name = "healthcare-knowledge-navigator"
version = "0.1.0"
description = "Hybrid (graph + vector) medical RAG assistant for healthcare professionals."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "neo4j>=5.20.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.9",
    "langchain-core>=0.3.0",
    "pymupdf>=1.25.0",
    "gradio>=5.0.0",
    "langchain-ollama>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
